--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -460,7 +460,7 @@
 		Russian:"'По миру тесному шагает колосс, а мы, ничтожные людишки, у исполинских ног его снуем и для себя могил бесславных ищем.' - Уильям Шекспир, 'Юлий Цезарь'"
 		Ukrainian:"'Так, мій друже. Він мов Колос, піднявсь над бідним світом, А ми, маленькі, ходим під тяжкими Його ногами й виглядаєм місця, Де б у ганебній опочіть могилі.' - Вільям Шекспір. Юлій Цезар"
 		Korean:"'그는 그 좁은 세상에 거신상처럼 우뚝 서 있고, 우리 하찮은 자들은 그 거대한 다리 사이를 지나다니며 부끄러운 무덤자리를 봐두려고 주변을 힐끔거리지.'-윌리엄 셰익스피어, 줄리어스 시저 1막 2장"
-		Portuguese:"Ora, homem, ele supera o mundo estreito como um colosso, e nós, homens mesquinhos andamos embaixo das suas grandes pernas, e espiamos para encontrar-nos túmulos desonrosos.' - William Shakespeare, Júlio César"
+		Portuguese:"'Ora, homem, ele supera o mundo estreito como um colosso, e nós, homens mesquinhos andamos embaixo das suas grandes pernas, e espiamos para encontrar-nos túmulos desonrosos.' - William Shakespeare, Júlio César"
 }
 
 	"+1 gold from worked water tiles in city":{
