--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -16,6 +16,7 @@
 		Czech:"Diplomacie"
                 Malay:"Diplomasi"
 		Korean:"외교"
+		Ukrainian:"Дипломатія"
 }
 
 	"War":{
@@ -32,6 +33,7 @@
 		Czech:"Válka"
                 Malay:"Perang"
 		Korean:"전쟁"
+		Ukrainian:"Війна"
 }
 
 	"Peace":{
@@ -48,6 +50,7 @@
 		Czech:"Mír"
                 Malay:"Aman"
 		Korean:"평화"
+		Ukrainian:"Мир"
 }
 
 	"Declare war":{
@@ -64,6 +67,7 @@
 		Czech:"Vyhlásit válku"
                 Malay:"Isytiharkan perang"
 		Korean:"전쟁 선포"
+		Ukrainian:"Оголосити війну"
 }
 
 	"Declare war on [civName]?":{ //Don't translate in diplomacy view
@@ -78,6 +82,7 @@
 		German:"[civName] den Krieg erklären?"
                 Malay:"Isytiharkan perang keatas [civName]?"
 		Korean:"[civName]에 전쟁을 선포할까요?"
+		Ukrainian:"Ви дійсно хочете оголосити війну цивізації «[civName]»?"
 }
 
 	"[civName] has declared war on us!":{
@@ -94,6 +99,7 @@
 		Czech:"Civilizace [civName] nám vyhlásila válku!"
                 Malay:"[civName] telah mengisytiharkan perang pada kita"
 		Korean:"[civName]이(가) 우리에게 전쟁을 선포했습니다!"
+		Ukrainian:"[civName] оголосила війну нам!"
 }
 
 	"[leaderName] of [nation]":{ // e.g. Ramasses of Egypt, Napoleon of France
@@ -109,6 +115,7 @@
                 Polish:"[leaderName], władca cywilizacji [nation]"
 		Czech:"[leaderName], [nation]"
 		Korean:"[nation]의 [leaderName]"
+		Ukrainian:"Лідер [leaderName] нації «[nation]»"
 }
 
 	"You'll pay for this!":{
@@ -124,6 +131,7 @@
                 Polish:"Zapłacisz za swą zuchwałość!"
 		Czech:"Za tohle zaplatite!"
 		Korean:"반드시 대가를 치르게 될거요!"
+		Ukrainian:"Ви заплатите за це"
 }
 
 	"Negotiate Peace":{
@@ -138,6 +146,7 @@
 		German:"Frieden verhandeln"
                 Malay:"Berunding keamanan"
 		Korean:"평화 협상"
+		Ukrainian:"Запропонувати мир"
 }
 
 	"Very well.":{
@@ -152,6 +161,7 @@
 		German:"Nun gut"
                 Malay:"Baiklah."
 		Korean:"아주 좋군."
+		Ukrainian:"Дуже добре"
 }
 
 	"Farewell.":{
@@ -166,6 +176,7 @@
 		German:"Auf Wiedersehen"
                 Malay:"Selamat tinggal."
 		Korean:"안녕히 계십시오."
+		Ukrainian:"До зустрічі"
 }
 
 	"Sounds good!":{
@@ -179,6 +190,7 @@
 		German:"Sehr gut"
                 Malay:"Bagus juga!"
 		Korean:"좋습니다."
+		Ukrainian:"Звучит добре"
 }
 
 	"Not this time.":{ // declining trade text
@@ -193,6 +205,7 @@
 		German:"Vielleicht ein anderes Mal"
                 Malay:"Bukan sekarang"
 		Korean:"이건 무리입니다."
+		Ukrainian:"Не цього разу."
 }
 
 	"Excellent!":{ // AI statement after we accept a trade they proposed, and when we meet a city state, and our response when they agree to our diplomatic demand
@@ -207,6 +220,7 @@
 		German:"Hervorragend!"
                 Malay:"Bagus!"
 		Korean:"훌륭하군요!"
+		Ukrainian:"Чудово!"
 }
 
 	"How about something else...":{ // Counteroffer to AI offer //shouldn't it be 'How about somenthing else?' ?
@@ -221,6 +235,7 @@
 		German:"Wie wäre es mit etwas anderem..."
                 Malay:"Mungkin benda lain"
 		Korean:"이런 건 어떠신지요..."
+		Ukrainian:"Як щодо іншого…"
 }
 
 	"A pleasure to meet you.":{
@@ -235,6 +250,7 @@
 		German:"Eine Freude, Sie getroffen zu haben."
                 Malay:"Selamat berkenalan"
 		Korean:"만나게 되어 영광입니다."
+		Ukrainian:"Приємно зустріти вас."
 }
 
 	"Our relationship: ":{
@@ -249,6 +265,7 @@
 		German:"Unsere Beziehung: "
                 Malay:"Hubungan kita"
 		Korean:"현재 관계 : "
+		Ukrainian:"Наші відносини"
 }
 
 	"We have encountered the City-State of [name]!":{ // e.g. the Cultured city state of Vienna
@@ -262,6 +279,7 @@
 		Czech:"Poprvé jsme se setkali s městským státem [name]"
 		German:"Wir haben den Stadtstaat von [name] entdeckt!"
 		Korean:"도시 국가 [name]와(과) 만났습니다!"
+		Ukrainian:""
 }
 
 	// Friendship declaration flavor texts
